fix: Adjust padding for scoped search input in navbar for better alignment

--- a/Frontend/css/components.css
+++ b/Frontend/css/components.css
@@ -242,7 +242,7 @@
 }
 
 #navbar .search-overlay .search-container .search-input.scoped {
-  padding-left: 130px;
+  padding-left: 160px;
 }
 
 /* --------------------
